[gd_scene load_steps=10 format=3 uid="uid://cwav8ma78d78y"]

[ext_resource type="Script" uid="uid://cbrfiao50xcnv" path="res://scenes/game_objects/player/player.gd" id="1_k7pqn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7uu8a"]
radius = 0.3
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tuuoe"]
radius = 0.3
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v2l2k"]
radius = 0.3
height = 0.6

[sub_resource type="SphereShape3D" id="SphereShape3D_tuuoe"]
radius = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_7uu8a"]
radius = 0.3

[sub_resource type="Animation" id="Animation_tuuoe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7, -0.1)]
}

[sub_resource type="Animation" id="Animation_7uu8a"]
resource_name = "crouch"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.7, -0.1), Vector3(0, 0.9, -0.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v2l2k"]
_data = {
&"RESET": SubResource("Animation_tuuoe"),
&"crouch": SubResource("Animation_7uu8a")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_k7pqn")

[node name="StandingCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_7uu8a")

[node name="CrouchingCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_tuuoe")
disabled = true

[node name="SwimmingCollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_v2l2k")
disabled = true

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -0.1)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]

[node name="InteractRay" type="RayCast3D" parent="CameraPivot"]
target_position = Vector3(0, 0, -2)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="WaterCollider" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_tuuoe")

[node name="UncrouchCollider" type="Area3D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="UncrouchCollider"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_7uu8a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_v2l2k")
}
